--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,17 +7,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-  <%= link_to "Home", root_path %>
-  <%= link_to "About Us", welcome_about_path %>
-  <%= link_to "Contact", welcome_contact_path %>
-  <%= link_to "Features", welcome_features_path %>
-  <%= link_to "FAQs", welcome_faq_path %>
-  <%= link_to "Pricing", welcome_pricing_path %>
-  <%= link_to "Invoices", invoices_path %>
-  <%= link_to "Login", root_path %>
+  
+<div class="container">
+  <ul class="nav nav-tabs">
+    <%= link_to "Home", root_path %>
+    <%= link_to "About Us", welcome_about_path %>
+    <%= link_to "Contact", welcome_contact_path %>
+    <%= link_to "Features", welcome_features_path %>
+    <%= link_to "FAQs", welcome_faq_path %>
+    <%= link_to "Pricing", welcome_pricing_path %>
+    <%= link_to "Invoices", invoices_path %>
+    <%= link_to "Login", root_path %>
+  </ul>
   
 <%= yield %>
+  
+<div>  
 
 </body>
 </html>
