--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -4,7 +4,7 @@
     <%= form_tag invoices_path, method: :get do %>
       <%= text_field_tag 'search[date_from]', @search.date_from %>
       <%= text_field_tag 'search[date_to]', @search.date_to %>
-      <%= submit_tag 'Search' class: 'btn search-button' %>
+      <%= submit_tag 'Search', class: 'btn search-button' %>
     <% end %>
   </div>
 </div>
